create IdentityModule structure

--- a/Api/ERP.Api/ERP.Api.csproj
+++ b/Api/ERP.Api/ERP.Api.csproj
@@ -25,6 +25,7 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Modules\IdentityModule\Identity.Api\Identity.Api.csproj" />
     <ProjectReference Include="..\..\Modules\InventoryModule\Inventory.Api\Inventory.Api.csproj" />
   </ItemGroup>
 
