--- a/Modules/IdentityModule/Identity.Application/Identity.Application.csproj
+++ b/Modules/IdentityModule/Identity.Application/Identity.Application.csproj
@@ -16,6 +16,12 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.9" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.9" />
 	</ItemGroup>
+	
+	<ItemGroup>
+	  <Folder Include="Contracts\Infrastructure\" />
+	  <Folder Include="Contracts\Persistence\" />
+	  <Folder Include="Dtos\" />
+	</ItemGroup>
 
 
 </Project>
