--- a/Modules/IdentityModule/Identity.Domain/Identity.Domain.csproj
+++ b/Modules/IdentityModule/Identity.Domain/Identity.Domain.csproj
@@ -5,5 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.9" />
+	</ItemGroup>
 </Project>
