add new fildes in entities in (inventory and procurment) module

--- a/Modules/ProcurementModule/Procurement.Application/Procurement.Application.csproj
+++ b/Modules/ProcurementModule/Procurement.Application/Procurement.Application.csproj
@@ -12,12 +12,11 @@
     <PackageReference Include="FluentValidation" Version="11.8.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Procurement.Domain\Procurement.Domain.csproj" />
-    <ProjectReference Include="..\Procurement.Infrastructure\Procurement.Infrastructure.csproj" />
     <ProjectReference Include="..\..\..\SharedKernel\Events\Events.csproj" />
   </ItemGroup>
 
