--- a/Modules/ProcurementModule/Procurement.Infrastructure/Procurement.Infrastructure.csproj
+++ b/Modules/ProcurementModule/Procurement.Infrastructure/Procurement.Infrastructure.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\SharedKernel\Events\Events.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Procurement.Application\Procurement.Application.csproj" />
   </ItemGroup>
 
 </Project>
