--- a/Api/ERP.Api/appsettings.json
+++ b/Api/ERP.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ConnectionString": "Server=DESKTOP-VGEBCK1\\SQLEXPRESS;Database=InventoryMicro;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False;TrustServerCertificate=True;"
+    "ConnectionString": "Server=db30885.public.databaseasp.net; Database=db30885; User Id=db30885; Password=G?a5#i6Pr9S!; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
   },
   "JwtSettings": {
     "Key": "put_a_very_long_secret_here_!@#_change_in_prod",
@@ -16,7 +16,6 @@
   }
 
 }
+ 
 
-
-// "Server=db30885.public.databaseasp.net; Database=db30885; User Id=db30885; Password=G?a5#i6Pr9S!; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
-
+//"Server=DESKTOP-VGEBCK1\\SQLEXPRESS;Database=InventoryMicro;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False;TrustServerCertificate=True;"
