-Add report module layers -Add report init Entities -Add first demo report

--- a/Modules/HrModule/Hr.Application/Hr.Application.csproj
+++ b/Modules/HrModule/Hr.Application/Hr.Application.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\SharedKernel\Events\Events.csproj" />
     <ProjectReference Include="..\Hr.Domain\Hr.Domain.csproj" />
   </ItemGroup>
 
