--- a/Api/ERP.Api/ERP.Api.csproj
+++ b/Api/ERP.Api/ERP.Api.csproj
@@ -29,6 +29,7 @@
     <ProjectReference Include="..\..\Modules\IdentityModule\Identity.Api\Identity.Api.csproj" />
     <ProjectReference Include="..\..\Modules\InventoryModule\Inventory.Api\Inventory.Api.csproj" />
     <ProjectReference Include="..\..\Modules\ProcurementModule\Procurement.Api\Procurement.Api.csproj" />
+    <ProjectReference Include="..\..\Modules\ReportModule\Report.Api\Report.Api.csproj" />
   </ItemGroup>
 
 </Project>
