-Add RunReportFeature -Add EmployeeReport

--- a/Modules/ReportModule/Report.Application/Report.Application.csproj
+++ b/Modules/ReportModule/Report.Application/Report.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\SharedKernel\Events\Events.csproj" />
     <ProjectReference Include="..\Report.Domain\Report.Domain.csproj" />
   </ItemGroup>
 
@@ -17,6 +18,8 @@
 	  <PackageReference Include="AutoMapper" Version="12.0.1" />
 	  <PackageReference Include="MediatR" Version="13.0.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+	  <PackageReference Include="SqlKata" Version="4.0.1" />
+
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.9" />
 <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.9" />
 
