--- a/Api/ERP.Api/appsettings.json
+++ b/Api/ERP.Api/appsettings.json
@@ -14,6 +14,9 @@
     "Issuer": "yourcompany.com",
     "Audience": "yourcompany.com",
     "DurationInMinutes": 60
+  },
+  "Groq": {
+    "ApiKey": "***REMOVED***UFfhUWPH4m1X6MUF6SYYWGdyb3FYT9h4aStT2G72mvZp0tOtjZij"
   }
 
 }
