--- a/Modules/ReportModule/Report.Application/Report.Application.csproj
+++ b/Modules/ReportModule/Report.Application/Report.Application.csproj
@@ -19,6 +19,7 @@
 	  <PackageReference Include="MediatR" Version="13.0.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
 	  <PackageReference Include="SqlKata" Version="4.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.9" />
 
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.9" />
 <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.9" />
